Tue Dec 31 04:39:03 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* src/man.c (man): If update is set, need_to_rerun() will always
	  have been called already by now. Remove this redundant code.

Tue Dec 31 04:26:50 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* man/man1/apropos.man1, man/man1/lexgrog.man1,
	  man/man1/manpath.man1, man/man1/whatis.man1,
	  man/man1/zsoelim.man1: --version no longer displays author
	  information.

Sun Dec 29 19:57:55 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* src/check_mandirs.c, src/check_mandirs.h: Move page_description
	  interface functions to ...
	* src/descriptions.c, src/descriptions.h: ... here (new files).
	* src/Makefile.in (man, mandb): Link descriptions.o.

	* libdb/db_storage.h: Include libdb/mydbm.h for the datum type.

Sun Dec 29 19:51:11 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l: Add commas between short and long options in usage
	  output.

	* src/accessdb.c (main): Support -h/--help and -v/--version options.
	  (usage): Document them. Move MAN_DB outside translatable string.
	* man/man8/accessdb.man8 (SYNOPSIS, OPTIONS): Document new options.
	  (AUTHOR): Add myself.
	* src/globbing.c (long_options, args, main): Support -h/--help and
	  -v/--version options.
	  (usage): New function.
	* zsoelim/zsoelim.l: Support long option forms of -C (--compatible),
	  -h (--help), and -V (--verbose).
	* man/man1/zsoelim.man1: Document long options.

	* src/Makefile.in: Link $(TOOLS) as well as $(PROGS) with version.o.

Sun Dec 29 19:40:46 GMT 2002  Colin Watson  <cjwatson@debian.org>

	Patch partly by Werner Fink <werner@suse.de>.

	* src/whatis.c (args, long_options): Add -v/--verbose option.
	  (usage): Document it.
	  (get_whatis): Print pointer loop warnings only if --verbose.
	  (main): Handle --verbose option.
	* man/man1/apropos.man1 (OPTIONS): Document --verbose.
	* man/man1/whatis.man1 (OPTIONS): Likewise.

Sun Dec 22 23:30:12 GMT 2002  Colin Watson  <cjwatson@debian.org>
