@@ -1,3 +1,11 @@
+Mon Jan  6 03:19:57 GMT 2003  Colin Watson  <cjwatson@debian.org>
+
+	* lib/error.c (error): Print a backtrace if the BACKTRACE_ON_ERROR
+	  symbol is defined. This undoubtedly isn't portable and is not
+	  intended for production use; it's just a last-resort way to get a
+	  backtrace when the usual methods fail, chiefly when running
+	  setuid.
+
 Tue Dec 31 04:39:03 GMT 2002  Colin Watson  <cjwatson@debian.org>
 
 	* src/man.c (man): If update is set, need_to_rerun() will always
